# reflect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: reflect  reflector
src/: main.cpp  reflect.cpp  reflector.cpp  vec3f
src/dm/: vec2i  vec3f
src/dm/sd/: var
